--- a/ModelLoader/ModelLoader.vcxproj.filters
+++ b/ModelLoader/ModelLoader.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MeshData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Model</Filter>
     </ClCompile>
     <ClCompile Include="PModel.cpp">
+      <Filter>Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Material.cpp">
       <Filter>Model</Filter>
     </ClCompile>
   </ItemGroup>
