Read diffuse texture data for each material. Loaded the texture data

--- a/ModelLoader/ModelLoader.vcxproj
+++ b/ModelLoader/ModelLoader.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PMaterial.h" />
+    <ClInclude Include="PMaterialInfo.h" />
     <ClInclude Include="PMeshData.h" />
     <ClInclude Include="PMesh.h" />
     <ClInclude Include="PMeshPart.h" />
